# SPRI_AI_2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/html/: annotated.html  batchnorm2d_8c.html  batchnorm2d_8c.js  batchnorm2d_8h.html  batchnorm2d_8h_source.html  conv2d_8c.html  conv2d_8h.html  conv2d_8h.js  conv2d_8h_source.html  dir_39ad8ae55e5e6bb8e5a72d2b575ac278.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8ddd85c06ebeec0a6efc6a7da38f01d9.html  dir_8ddd85c06ebeec0a6efc6a7da38f01d9.js  doubleconv2d_8c.html  (+29 more)
docs/: annotated.html  annotated_dup.js  batchnorm2d_8c.html  batchnorm2d_8c_source.html  batchnorm2d_8h.html  batchnorm2d_8h.js  batchnorm2d_8h_source.html  classes.html  conv2d_8c.html  conv2d_8c.js  conv2d_8c_source.html  conv2d_8h.html  conv2d_8h.js  conv2d_8h_source.html  convtranspose2d_8c.html  convtranspose2d_8c.js  convtranspose2d_8c_source.html  convtranspose2d_8h.html  convtranspose2d_8h.js  convtranspose2d_8h_source.html  dir_39ad8ae55e5e6bb8e5a72d2b575ac278.html  dir_39ad8ae55e5e6bb8e5a72d2b575ac278.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8ddd85c06ebeec0a6efc6a7da38f01d9.html  dir_8ddd85c06ebeec0a6efc6a7da38f01d9.js  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  doubleconv2d_8c.html  doubleconv2d_8c.js  doubleconv2d_8c_source.html  doubleconv2d_8h.html  doubleconv2d_8h.js  doubleconv2d_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  (+44 more)
inc/: main.h
src/: main.c
(+104 files in other folders)
